test/Fail/StaleMetaLiteral.err
StaleMetaLiteral.agda:14.7-28: error: [Unquote.StaleMeta]
Cannot unquote stale metavariable Imports.StaleMetaLiteral._14
when checking that the expression unquote (unquoteMeta staleMeta)
has type _A_4
